--- a/app/src/main/res/layout/activity_tasks_view.xml
+++ b/app/src/main/res/layout/activity_tasks_view.xml
@@ -33,18 +33,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
             <ListView
-                android:layout_width="wrap_content"
+                android:id="@+id/EventList"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="5"/>
             <Button
+                android:id="@+id/NewTask"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="300dp"
@@ -54,6 +56,7 @@
 
         </LinearLayout>
     </ScrollView>
+
 
 
 
