Commit for final progress report

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,21 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".CalendarFragment"
     android:orientation="vertical">
-
-    <Button
-        android:id="@+id/NavButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nav"></Button>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="25dp">
+        android:layout_marginBottom="25dp">
         <Button
             android:layout_width="70dp"
             android:layout_height="wrap_content"
@@ -27,7 +20,7 @@
             android:textStyle="bold"
             android:background="@null"
             android:textSize="20sp"
-            android:onClick="PreviousMonthAction"/>
+            android:id="@+id/PreviousMonthButton" />
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -50,7 +43,7 @@
             android:textStyle="bold"
             android:background="@null"
             android:textSize="20sp"
-            android:onClick="NextMonthAction"/>
+            android:id="@+id/NextMonthButton" />
     </LinearLayout>
 
 
