--- a/app/src/main/res/layout/fragment_daily_view.xml
+++ b/app/src/main/res/layout/fragment_daily_view.xml
@@ -18,7 +18,7 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:onClick="PreviousDayAction"
+            android:id="@+id/PreviousDayButton"
             android:text="--"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -45,7 +45,7 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:onClick="NextDayAction"
+            android:id="@+id/NextDayButton"
             android:text="--"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -64,12 +64,21 @@
             android:orientation="vertical">
             <ListView
                 android:id="@+id/HourList"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="5"/>
+            <Button
+                android:id="@+id/MakeNewTask"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="300dp"
+                android:layout_marginBottom="20dp"
+                android:text="+"
+                android:textSize="30sp"/>
 
         </LinearLayout>
     </ScrollView>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
