--- a/app/src/main/res/layout/fragment_tasks_view.xml
+++ b/app/src/main/res/layout/fragment_tasks_view.xml
@@ -3,38 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TasksView">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:id="@+id/NavButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nav"
-            tools:ignore="MissingConstraints"></Button>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Tasks"
-            android:background="@color/teal_200"
-            android:textAlignment="center"
-            android:textSize="25dp" />
-
-
-    </LinearLayout>
+        android:text="Tasks"
+        android:background="@color/teal_200"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/textbox1"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="80dp"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/textbox1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
